# droner

./: CMakeLists.txt
fry/: CMakeLists.txt  DataPersistor.cpp  DataPersistor.h  GyroWrapper.cpp  GyroWrapper.h  MotorController.cpp  MotorController.h  PIDProcess.cpp  PIDProcess.h  qcopter.cpp  qutils.h
fry/libraries/: GyroWrapper.cpp  GyroWrapper.h  MPU6050_6Axis_MotionApps20.h  qutils.h
fry/utilities/: graphical_mpu_display.pde
